--- a/ppw_book/_toc.yml
+++ b/ppw_book/_toc.yml
@@ -7,3 +7,5 @@ chapters:
 - file: tugas-1-crawling
 - file: tugas-2-vsm
 - file: tugas-3-logit
+- file: tugas-4-ringkasanBerita
+- file: tugas-5-keyword-extraction
