--- a/ppw_book/_config.yml
+++ b/ppw_book/_config.yml
@@ -8,7 +8,7 @@
 title: PPW # The title of the book. Will be placed in the left navbar.
 author: Mohammad Habibul Akhyar # The author of the book
 copyright: "2024" # Copyright year to be placed in the footer
-logo: akhyar.jpg # A path to the book logo
+# logo: akhyar.jpg # A path to the book logo
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
